src/objects/Key_Risk_Indicator__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business / Growth Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings / Margin Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Sheet Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation / Compliance Risks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Measured_Unit__c</fullName>
        <label>Measured Unit</label>
        <picklist>
            <picklistValues>
                <fullName>USD Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratio %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Qualitative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantitative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Key Risk Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Key Risk Indicator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Risk Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>